Set font sizes to 16px for search form inputs to prevent auto zoom on mobile devices

--- a/src/styling/activity/sort.scss
+++ b/src/styling/activity/sort.scss
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  border: none;
 }
 
 .sort-text {
